--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "node-cron": "^4.2.1",
     "node-telegram-bot-api": "^0.66.0",
     "pg": "^8.16.3"
