--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "firebase-admin": "^13.6.0",
     "node-cron": "^4.2.1",
     "node-telegram-bot-api": "^0.66.0",
     "pg": "^8.16.3"
